# RokeyProjects

./: README.md  new_ui.py  test.py  test_jaejun.py
CleaningRobotProject/: README.md
CleaningRobotProject/self_cleaning_robot_ws/src/self_cleaning_robot/: package.xml  setup.cfg  setup.py
ConveyorProject/: README.md  conveyor_system.py  db_manager.py  defect_analysis_charts.py  defect_detection.py  requirements.txt  server_manager.py  test_in_endpoint.py  test_in_localserver.py  validator.py
DetectCarProject/: README.md
DetectCarProject/src/compressed_image/: package.xml  setup.cfg  setup.py
DetectCarProject/src/compressed_image/compressed_image/: image_publisher_1.py  image_publisher_2.py  image_subscriber_flask.py
DetectCarProject/src/monitor_test/: package.xml  setup.cfg  setup.py
DetectCarProject/src/monitor_test/monitor_test/: camera_subscriber.py  debug_logger.py  dual_image_publisher.py  ui_camera_subscriber copy.py  ui_camera_subscriber.py
DetectCarProject/src/multi_image_package/: package.xml  setup.py
DetectCarProject/src/multi_image_package/multi_image_package/: amr_operating.py  image_publisher_1.py  image_subscriber_flask.py  init_pose.py
DetectCarProject/src/my_package/: setup.py
DetectCarProject/src/random_position_controller/: package.xml  setup.cfg  setup.py
DetectCarProject/src/random_position_controller/random_position_controller/: random_position_publisher.py  turtlebot_subscriber.py
DoosanRobotProejct/: B5_Sportstaking_발표자료.pptx  README.md  cup_stacker.py  cup_stacker_with_algorithm.py  gear_assembly.py  jenga_stacker.py  jenga_stacker_faster.py  pallet_control.py  two_robot_socket_client.py  two_robot_socket_server.py
ManipulatorAmrProject/: README.md
ManipulatorAmrProject/Week5Project_ws/src/boxproject/: setup.py
ManipulatorAmrProject/Week5Project_ws/src/log/: latest_build
ParkingLotProject/: README.md
ParkingLotProject/B5/src/nav_node/: package.xml  setup.py
ParkingLotProject/B5/src/turtlebot3_interfaces/: CMakeLists.txt  package.xml
ParkingLotProject/B5/src/turtlebot3_multi_robot/: package.xml  setup.cfg  setup.py
ParkingLotProject/B5/src/turtlebot3_multi_robot/turtlebot3_multi_robot/: lifting_car.py
ParkingLotProject/B5/src/turtlebot3_multi_robot/urdf/: turtlebot3_waffle.urdf
ParkingLotProject/B5/src/turtlebot3_python_nodes/: package.xml
ParkingLotProject/map/: model.config  model.sdf
ServiceRobotProject/: README.md
ServiceRobotProject/B5/: map.pgm  map.yaml  restaurant.db  restaurant_db.db
ServiceRobotProject/B5/install/: local_setup.sh  setup.sh  setup.zsh
ServiceRobotProject/B5/log/: latest_build  latest_list
ServiceRobotProject/B5/src/menu_order_interfaces/: CMakeLists.txt
ServiceRobotProject/B5/src/menu_order_interfaces/action/: Serve.action
ServiceRobotProject/B5/src/menu_order_interfaces/msg/: Order.msg
ServiceRobotProject/B5/src/menu_order_interfaces/srv/: MenuTable.srv
ServiceRobotProject/B5/src/menu_order_project/: package.xml  setup.cfg  setup.py
Week5Project_ws/install/: local_setup.sh  setup.ps1  setup.sh
Week5Project_ws/log/: latest_build  latest_list
Week5Project_ws/src/boxproject/: setup.py
Week5Project_ws/src/boxproject/boxproject/: GUI_node.py  detection_grip_temp.py  robot_arm_node copy.py  turtle_yolo.py  web_camera_node.py
Week5Project_ws/src/boxproject_interfaces/: CMakeLists.txt  package.xml
Week5Project_ws/src/install/: setup.sh
install/: local_setup.sh  setup.sh
install/multi_image_package/lib/multi_image_package/: image_publisher_1  image_publisher_2  image_subscriber
install/multi_image_package/share/multi_image_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my-test-package/share/my-test-package/: package.sh
install/my_package/lib/my_package/: camera_publisher  camera_subscriber  data_publisher  data_subscriber  image_publisher  image_subscriber
install/my_package/share/my_package/: package.sh
install/stevedore-examples/share/stevedore-examples/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
multitb_ws/install/: local_setup.sh  setup.sh
multitb_ws/log/: latest_build
multitb_ws/src/turtlebot3_interfaces/: CMakeLists.txt
multitb_ws/src/turtlebot3_python_nodes/: parking_system.db  setup.cfg  setup.py
output/: statistics.csv
src/boxproject/: setup.cfg  setup.py
src/boxproject/boxproject/: GUI_node.py  debug_node.py  web_camera_node.py
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/multi_image_package/: setup.cfg  setup.py
src/multi_image_package/multi_image_package/: image_publisher_1.py  image_publisher_2.py  image_subscriber.py
src/my_package/: package.xml
turtlebot3_ws/: my_map.pgm  my_map.yaml
turtlebot3_ws/install/: local_setup.sh  setup.sh
turtlebot3_ws/log/: latest_build
turtlebot3_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
turtlebot3_ws/src/log/: latest_build
(+984 files in other folders)
